opam-version: "2.0"
name: "coswitch"
version: "1.0.0"
synopsis: "Bazel-opam integration tool"
maintainer: "Gregg Reynolds"
authors: "Gregg Reynolds"
license: "MIT"
homepage: "https://github.com/obazl/coswitch"
doc: "https://github.com/obazl/coswitch"
bug-reports: "https://github.com/obazl/coswitch/issues"
# build-env: [
#   [BAZELISK_BASE_URL = "https://github.com/bazelbuild/bazel/releases/download"]
#   [USE_BAZEL_VERSION = "6.3.2"]
# ]
build: [
  ["bazel"
   "--bazelrc=.config/opam.bazelrc"
   "--nosystem_rc"
   "--nohome_rc"
   "--noworkspace_rc"
   "build" "new"
  ]
]
install: [
  ["bazel"
   "--bazelrc=.config/opam.bazelrc"
   "--nosystem_rc"
   "--nohome_rc"
   "--noworkspace_rc"
   "run" "opam:install"
  ]
]

url {
  archive: "https://github.com/obazl/coswitch/archive/refs/heads/dev.zip"
  # checksum: ""
}
