load("@makeheaders//rules:makeheaders.bzl", "makeheaders")
load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "PROFILE",
     "define_module_version")

# LOCAL_REPO=repo_name()
## ERROR: repo_name not defined (v 7.0)
LOCAL_REPO=repository_name()[1:]   # "" or "coswitch~2.0.0" etc

exports_files(["coswitch.c"])

##########
cc_binary(
    name  = "new",
    visibility = ["//visibility:public"],
    srcs  = [
        "coswitch.c",
        ":mkhdrs",
    ],
    deps = [
        "@cwalk//src:cwalk",
        "@findlibc//lib:findlibc",
        "@liblogc//lib:logc",
        "@libs7//lib:s7",
        "@opamc//lib:opamc",
        "@xdgc//lib:xdgc",
        "@gopt//lib:gopt",
        "@uthash//lib:uthash",
        "//new/bazel"
    ],
    copts = BASE_COPTS + [
        "-I$(GENDIR)/{}/new".format(repository_name()[1:]),
        "-I$(GENDIR)/external/{}/new".format(repository_name()[1:]),
    ],
    features = ["layering_check"],
    linkopts = BASE_LINKOPTS + [
        # "--verbose",
        # "-v",
    ],
    defines = PROFILE + select({
        ## for realpath
        "@platforms//os:linux": ["_XOPEN_SOURCE=500"],
        "//conditions:default": []
    }),
    local_defines = define_module_version() + [
        "LOCAL_REPO=\\\"{}\\\"".format(LOCAL_REPO),
    ],
    linkstatic = 1,
)

########
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "coswitch.c",
    ],
    additional_srcs = [
        "//new/bazel:emit_build_bazel.c",
        "//new/bazel:emit_ocaml_repo.c",
        "//new/bazel:emit_pkg_bindir.c",
        "//new/bazel:registry.c",
        "//src/utils:utils.c",
        "@makeheaders//logging:ansi_colors.h"
    ] + select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }),
)
