sh_binary(
    name = "install",
    srcs = ["opam_install.sh"],
    args = ["$(rlocationpath //new)"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
    data = [
        "//new",
        "//new/templates:ocaml_bigarray.BUILD",
        "//new/templates:ocaml_c_api.BUILD",
        "//new/templates:ocaml_compiler-libs.BUILD",
        "//new/templates/compiler_libs:bytecomp.BUILD",
        "//new/templates/compiler_libs:common.BUILD",
        "//new/templates/compiler_libs:optcomp.BUILD",
        "//new/templates/compiler_libs:toplevel.BUILD",
        "//new/templates/compiler_libs:native_toplevel.BUILD",
        "//new/templates:ocaml_dynlink.BUILD",
        "//new/templates:ocaml_dynlink_alias.BUILD",
        "//new/templates:ocaml_num.BUILD",
        "//new/templates:ocaml_ocamldoc.BUILD",
        "//new/templates:ocaml_runtime.BUILD",
        "//new/templates:ocaml_rtevents.BUILD",
        "//new/templates:ocaml_rtevents_alias.BUILD",
        "//new/templates:ocaml_stdlib.BUILD",
        "//new/templates:ocaml_stdlib_alias.BUILD",
        "//new/templates:ocaml_str.BUILD",
        "//new/templates:ocaml_str_alias.BUILD",

        "//new/templates/platform:BUILD.bazel",
        "//new/templates/platform/build:BUILD.bazel",
        "//new/templates/platform/executor:BUILD.bazel",
        "//new/templates/platform/target:BUILD.bazel",

        "//new/templates:toolchain/adapters/local.BUILD",
        "//new/templates:toolchain/adapters/local.BUILD.mustache",
        "//new/templates:toolchain/adapters/linux/x86_64.BUILD",
        "//new/templates:toolchain/adapters/linux/arm.BUILD",
        "//new/templates:toolchain/adapters/macos/x86_64.BUILD",
        "//new/templates:toolchain/adapters/macos/arm.BUILD",
        "//new/templates:toolchain/profiles/profiles.BUILD",
        "//new/templates:toolchain/selectors/local.BUILD",
        "//new/templates:toolchain/selectors/linux/x86_64.BUILD",
        "//new/templates:toolchain/selectors/linux/arm.BUILD",
        "//new/templates:toolchain/selectors/macos/arm.BUILD",
        "//new/templates:toolchain/selectors/macos/x86_64.BUILD",
        # "//new/templates/host/bazel:BUILD.bazel",
        # "//new/templates/host/build:BUILD.bazel",
        # "//new/templates/host/target:BUILD.bazel",
        "//new/templates:ocaml_threads.BUILD",
        "//new/templates:ocaml_threads_alias.BUILD",
        "//new/templates:ocaml_unix.BUILD",
        "//new/templates:ocaml_unix_alias.BUILD",
    ],
)

