load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LINKOPTS",
     "PROFILE")

load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

# TOOLCHAINS = ["//:module_profiles"]

exports_files(["utils.c"])

##########
cc_library(
    name  = "utils",
    visibility = ["//visibility:public"],
    srcs  = [
        "utils.c",
        ":mkhdrs",
        # "//src/hdrs:coswitch.h",
    ],
    includes = ["."],
    deps = [
        "@liblogc//lib:logc",
        "@uthash//lib:uthash"

        # "@findlibc//lib:findlibc",
        # "@opamc//lib:opamc",
        # "@xdgc//lib:xdgc",
        # "@gopt//src:gopt",
        # "@libs7//src:s7",
        # "@liblogc//lib:logc",
   ],
    copts = BASE_COPTS + [
        # "-I$(@liblogc)/src",
        # "-I$(@uthash)/src",
        # "-I$(GENDIR)/$(@)/src/utils"

        # "-I$(GENDIR)/$(@findlibc)/src",
        # "-I$(GENDIR)/$(@opamc)/src",
        # "-I$(GENDIR)/$(@xdgc)/src",
        # "-I$(@libs7)/src",
        # "-I$(GENDIR)/$(@libs7)/src",
        # "-I$(@)/src",
        # "-I$(GENDIR)/$(@)/new",
    ],
    defines = PROFILE,
    linkstatic = 1,
    # toolchains = TOOLCHAINS,
)

################
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = ["utils.c"],
    additional_srcs = [
        "@makeheaders//logging:ansi_colors.h"
    ] + select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }),
 # [
 #        "//src:ansi_colors.h",
 #    ] + select({
 #        "//config/compilation_mode:fastbuild?": [
 #            "//src:macros_debug.h",
 #        ],
 #        "//conditions:default":   [
 #            "//src:macros_ndebug.h",
 #        ]
 #    })
)

